@@ -427,10 +427,6 @@ void fasp_symbfactor (INT   n,
                       INT  *uptr,
                       INT  *ierr);
 
-void fasp_check_col_index (INT row,
-                           INT num,
-                           INT  *q);
-
 
 /*-------- In file: BlaILUSetupBSR.c --------*/
 
@@ -835,21 +831,6 @@ dBSRmat fasp_dbsr_perm (const dBSRmat *A,
 INT fasp_dbsr_merge_col (dBSRmat *A);
 
 
-/*-------- In file: BlaSparseCheck.c --------*/
-
-INT fasp_check_diagpos (const dCSRmat *A);
-
-SHORT fasp_check_diagzero (const dCSRmat *A);
-
-INT fasp_check_diagdom (const dCSRmat *A);
-
-INT fasp_check_symm (const dCSRmat *A);
-
-void fasp_check_dCSRmat (const dCSRmat *A);
-
-SHORT fasp_check_iCSRmat (const iCSRmat *A);
-
-
 /*-------- In file: BlaSparseCOO.c --------*/
 
 dCOOmat fasp_dcoo_create (const INT  m,
@@ -968,6 +949,21 @@ dCSRLmat * fasp_dcsrl_create (const INT num_rows,
                               const INT num_nonzeros);
 
 void fasp_dcsrl_free (dCSRLmat *A);
+
+
+/*-------- In file: BlaSparseCheck.c --------*/
+
+INT fasp_check_diagpos (const dCSRmat *A);
+
+SHORT fasp_check_diagzero (const dCSRmat *A);
+
+INT fasp_check_diagdom (const dCSRmat *A);
+
+INT fasp_check_symm (const dCSRmat *A);
+
+void fasp_check_dCSRmat (const dCSRmat *A);
+
+SHORT fasp_check_iCSRmat (const iCSRmat *A);
 
 
 /*-------- In file: BlaSparseSTR.c --------*/
@@ -2185,21 +2181,15 @@ SHORT fasp_amg_setup_rs (AMG_data   *mgl,
                          AMG_param  *param);
 
 
-/*-------- In file: PreAMGSetupSABSR.c --------*/
-
-SHORT fasp_amg_setup_sa_bsr (AMG_data_bsr  *mgl,
-                             AMG_param     *param);
-
-
 /*-------- In file: PreAMGSetupSA.c --------*/
 
 SHORT fasp_amg_setup_sa (AMG_data   *mgl,
                          AMG_param  *param);
 
 
-/*-------- In file: PreAMGSetupUABSR.c --------*/
+/*-------- In file: PreAMGSetupSABSR.c --------*/
 
-SHORT fasp_amg_setup_ua_bsr (AMG_data_bsr  *mgl,
+SHORT fasp_amg_setup_sa_bsr (AMG_data_bsr  *mgl,
                              AMG_param     *param);
 
 
@@ -2207,6 +2197,12 @@ SHORT fasp_amg_setup_ua_bsr (AMG_data_bsr  *mgl,
 
 SHORT fasp_amg_setup_ua (AMG_data   *mgl,
                          AMG_param  *param);
+
+
+/*-------- In file: PreAMGSetupUABSR.c --------*/
+
+SHORT fasp_amg_setup_ua_bsr (AMG_data_bsr  *mgl,
+                             AMG_param     *param);
 
 
 /*-------- In file: PreBLC.c --------*/
@@ -2391,6 +2387,13 @@ void fasp_solver_fmgcycle (AMG_data   *mgl,
                            AMG_param  *param);
 
 
+/*-------- In file: PreMGRecur.c --------*/
+
+void fasp_solver_mgrecur (AMG_data   *mgl,
+                          AMG_param  *param,
+                          INT         level);
+
+
 /*-------- In file: PreMGRecurAMLI.c --------*/
 
 void fasp_solver_amli (AMG_data   *mgl,
@@ -2411,13 +2414,6 @@ void fasp_amg_amli_coef (const REAL  lambda_max,
                          const REAL  lambda_min,
                          const INT   degree,
                          REAL       *coef);
-
-
-/*-------- In file: PreMGRecur.c --------*/
-
-void fasp_solver_mgrecur (AMG_data   *mgl,
-                          AMG_param  *param,
-                          INT         level);
 
 
 /*-------- In file: PreMGSolve.c --------*/
