@@ -3,7 +3,8 @@ File Name: CHANGES
 08/08/2017 FASP 2.0.0:
 - Add duplicated column check for BSR matrices.
 - Fix ILU hanging problem when there are duplicated columns.
-- Find a bug in ILU setup which could cause stack overflow.
+- Fix a bug in ILU setup which could cause stack overflow.
+- Fix a bug in coarsening when coarsening ratio is too high.
 
 03/29/2017 FASP 1.9.9:
 - Fix ILUtp problem with permutation.
